fix: java release fails with API error related to JDK >=16 (#1329)
Reference: https://stackoverflow.com/questions/69753263/unable-to-make-field-final-transient-java-lang-class-java-util-enumset-elementty

-----

By submitting this pull request, I confirm that my contribution is made under the terms of the Apache 2.0 license.